# unbeatable-tictactoe-in-c

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: all_tests.yml  integration_tests.yml  main.yml  unit_tests.yml
data/app/gameplays/: easy_gameplays_moves.txt  easy_gameplays_titles.txt
data/test/: user_second_random_board_place_numbers.txt
include/common/: common.h  err.h  form.h  graphic.h
include/computer_turn/: computer_moves.h  computer_turn.h  normal_mode.h  unbeatable_mode.h
include/friends_gameplay/: friends_gameplay.h  multiple_player_game_checkers.h
include/game_play/: game_checkers.h  game_play.h  saving_gameplays.h  user_turn.h
src/: main.c
src/common/: err.c  form.c  graphic.c
src/computer_turn/: computer_moves.c  computer_turn.c  normal_mode.c  unbeatable_mode.c
src/friends_gameplay/: friends_gameplay.c  multiple_player_game_checkers.c
src/game_play/: game_checkers.c  game_play.c  saving_gameplays.c  user_turn.c
test/: run_testing.c  run_testing.h  run_testing.md
test/integration/: unbeatable_mode_game_simulation.c  user_playing_samples.c
test/temp/: tempCodeRunnerFile.c  test  test.c  text.txt  traversing_game  traversing_game.c
test/unit/: test  test.c  test1  traversing_game  traversing_game.c
test/unit/temp/: test.c
test/unit/unbeatable_mode/: commands.md  running_test_commands.md  unbeatable_mode_game_simulation.c  unbeatable_mode_test.c  user_choices_samples.c
